# infra-ovh

./: .gitignore  .terraform.lock.hcl  .tool-versions  ansible.cfg  compatible-servers  components.tfcomponent.hcl  deployments.tfdeploy.hcl  mise.toml  multinode.ini  outputs.tfdeployment.hcl  providers.tfcomponent.hcl  pyproject.toml  variables.tfcomponent.hcl
.github/workflows/: ansible-syntax.yaml  cloudflare-tunnel-all-openstack.yaml  cloudflare-tunnel-cinder.yaml  cloudflare-tunnel-designate.yaml  cloudflare-tunnel-glance.yaml  cloudflare-tunnel-heat-cfn.yaml  cloudflare-tunnel-heat.yaml  cloudflare-tunnel-horizon-api.yaml  cloudflare-tunnel-horizon.yaml  cloudflare-tunnel-k3s-api.yaml  cloudflare-tunnel-keystone.yaml  cloudflare-tunnel-neutron.yaml  cloudflare-tunnel-nova.yaml  cloudflare-tunnel-octavia.yaml  cloudflare-tunnel-openstack.yaml  cloudflare-tunnel-placement.yaml  cloudflare-tunnel.yaml  configure-wireguard-mesh.yaml  default-branch-build.yaml  deploy-openstack-cluster.yaml  destroy-infrastructure.yaml  force-replace-servers.yaml  openstack-maintenance-bootstrap.yaml  openstack-maintenance-deploy.yaml  openstack-maintenance-post-deploy.yaml  openstack-maintenance-prechecks.yaml  openstack-maintenance-prepare-hosts.yaml  openstack-maintenance-prometheus-reconfigure.yaml  openstack-maintenance-pull.yaml  openstack-maintenance-reconfigure-mariadb.yaml  openstack-maintenance-reconfigure-octavia.yaml  openstack-maintenance-upgrade.yaml  (+4 more)
ansible/: ansible.cfg  requirements.txt
docs/: README.md
working/: README.md  ansible.cfg  requirements.txt
(+78 files in other folders)
